# ad

./: .gitignore  README.md  cli.py  config.py  data_processor.py  detector.py  evaluation.py  models.py  pyproject.toml  train_with_parquet.py  utils.py
evaluation_results/: evaluation_results.json
